--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <main>
       <ul class="card-list">
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">
               Фритрек и нулевой спринт: Подготовка к работе
             </h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image"
@@ -93,9 +93,9 @@
           </div>
         </li>
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">1 спринт: Я — чистый лист</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-brightless"
@@ -164,9 +164,9 @@
           </div>
         </li>
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">1 спринт: А если не получится?</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-bright"
@@ -234,9 +234,9 @@
         </li>
 
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">2 спринт: Погоня за идеалом</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-purple"
@@ -305,9 +305,9 @@
           </div>
         </li>
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">2 спринт: О тех, кто рядом</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-negative"
@@ -377,9 +377,9 @@
           </div>
         </li>
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">3 спринт: Обходные стратегии</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-retro"
@@ -447,9 +447,9 @@
           </div>
         </li>
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">3 спринт: Когда опускаются руки</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-blur"
@@ -518,9 +518,9 @@
           </div>
         </li>
         <li class="card-list_item">
-          <span class="card-title_block">
+          <div class="card-title_block">
             <h3 class="card-title">«Сейчас я здесь»</h3>
-          </span>
+          </div>
           <div class="image-wrapper">
             <img
               class="card-image car-orange"
@@ -593,17 +593,16 @@
       </ul>
       <footer>
         <div class="save-button_block">
-          <button class="save-button">
+          <button
+            class="save-button"
+            type="button"
+            onclick="window['dialog-id'].showModal()"
+            aria-controls="dialog-id"
+          >
             <svg class="save-svg">
               <use href="./svg/floppy.svg#floppy"></use>
             </svg>
-            <span
-              class="button__text"
-              type="button"
-              onclick="window['dialog-id'].showModal()"
-              aria-controls="dialog-id"
-              >Сохранить на память</span
-            >
+            <span class="button__text">Сохранить на память</span>
           </button>
         </div>
       </footer>
