--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
-    <link rel="icon" href="./images/favicon.ico" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon (2).svg" type="image/svg+xml" />
+    <link rel="favicon-icon" href="./images/favicon.png" />
   </head>
   <body class="page">
     <header class="header">
@@ -22,9 +24,9 @@
       <ul class="card-list">
         <li class="card-list_item">
           <div class="card-title_block">
-            <h3 class="card-title">
+            <h2 class="card-title">
               Фритрек и нулевой спринт: Подготовка к работе
-            </h3>
+            </h2>
           </div>
           <div class="image-wrapper">
             <img
@@ -38,15 +40,15 @@
             <p class="card-description">
               Это было самое начало пути. На этом этапе важно было проникнуться
               основами и настроиться на учёбу. И, возможно, подумать, как новые
-              знания могут повлиять на ваше будущее. <br /><span
-                class="card-description card-description_next-line"
-                >В этот момент я была полна интузиазма в предвкушении начала
-                изучения чего-то нового!</span
-              >
+              знания могут повлиять на ваше будущее.
+            </p>
+            <p class="card-description card-description_next-line">
+              В этот момент я была полна интузиазма в предвкушении начала
+              изучения чего-то нового!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -54,6 +56,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -87,7 +90,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -111,13 +114,13 @@
               Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто
               за этим ощущением скрываются более глубокие вопросы: с чего
               начать? а вдруг будет слишком сложно? что, если я не справлюсь?
-              <br /><span class="card-description card-description_next-line"
-                >Было страшно. Но чем дальше, тем понятней!</span
-              >
+            </p>
+            <p class="card-description card-description_next-line">
+              Было страшно. Но чем дальше, тем понятней!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -158,7 +161,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -180,13 +183,13 @@
               Первый проект — позади! Но это всё ещё самое начало пути. Радость
               могла быстро померкнуть и смениться ожиданием провала. Или вы,
               наоборот, могли вдохновиться успехами и поверить в себя.
-              <br /><span class="card-description card-description_next-line"
-                >Чем больше получалось, тем больше верила в себя!</span
-              >
+            </p>
+            <p class="card-description card-description_next-line">
+              Чем больше получалось, тем больше верила в себя!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -227,7 +230,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -251,14 +254,14 @@
               чтобы понять, как много ещё впереди. Вы могли попытаться погнаться
               за идеалом и понять, что он недостижим. А, может, вы вовсе и не
               подвержены перфекционизму и вместо того, чтобы сделать идеально,
-              старались просто сделать. <br /><span
-                class="card-description card-description_next-line"
-                >Сверяла каждый пиксель, чтобы сделать идеально!</span
-              >
+              старались просто сделать.
+            </p>
+            <p class="card-description card-description_next-line">
+              Сверяла каждый пиксель, чтобы сделать идеально!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -299,7 +302,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -323,14 +326,14 @@
               одногруппники, команда сопровождения и просто близкие люди,
               которым можно пожаловаться, если очередной макет просто так не
               поддавался. Осваивать что-то новое легче, когда рядом есть
-              единомышленники, не правда ли? <br /><span
-                class="card-description card-description_next-line"
-                >Да! Всегда можно позлиться вместе.</span
-              >
+              единомышленники, не правда ли?
+            </p>
+            <p class="card-description card-description_next-line">
+              Да! Всегда можно позлиться вместе.
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -371,7 +374,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -392,15 +395,14 @@
             <p class="card-description">
               На этом курсе вы постоянно решали разные задачи. В какой-то момент
               вам могло показаться, что решения просто иссякли. Значит, пришло
-              время посмотреть на задачу под другим углом. <br /><span
-                class="card-description card-description_next-line"
-                >Рассматривала задачи под всеми углами, даже по оси
-                апликат!</span
-              >
+              время посмотреть на задачу под другим углом.
+            </p>
+            <p class="card-description card-description_next-line">
+              Рассматривала задачи под всеми углами, даже по оси апликат!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -441,7 +443,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -464,14 +466,14 @@
               хвататься. Вроде и проектную пора сдавать, и задачи хочется
               порешать, и в теории получше разобраться, и жизнь не забыть
               пожить. В такие моменты очень нужна концентрация. Вспомните,
-              откуда вы её черпали. <br /><span
-                class="card-description card-description_next-line"
-                >Я представляля себя успешным разработчиком!</span
-              >
+              откуда вы её черпали.
+            </p>
+            <p class="card-description card-description_next-line">
+              Я представляля себя успешным разработчиком!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -512,7 +514,7 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -536,15 +538,15 @@
               с окончанием курса учёба не заканчивается. Вёрстка — это целый
               мир. И этот мир постоянно меняется. Познать его полностью не
               получится, но это тот случай, когда важен сам процесс познания.
-              Ведь часто путь — и есть результат. <br /><span
-                class="card-description card-description_next-line"
-                >У самурая нет цели, есть только путь. И тогда любой объем
-                теории ни по чём!</span
-              >
+              Ведь часто путь — и есть результат.
+            </p>
+            <p class="card-description card-description_next-line">
+              У самурая нет цели, есть только путь. И тогда любой объем теории
+              ни по чём!
             </p>
           </div>
           <div class="buttons-block">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg
                 class="like-icon"
                 width="39"
@@ -585,39 +587,37 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
         </li>
       </ul>
-      <footer>
-        <div class="save-button_block">
-          <button
-            class="save-button"
-            type="button"
-            onclick="window['dialog-id'].showModal()"
-            aria-controls="dialog-id"
-          >
-            <svg class="save-svg">
-              <use href="./svg/floppy.svg#floppy"></use>
-            </svg>
-            <span class="button__text">Сохранить на память</span>
-          </button>
-        </div>
-      </footer>
+
+      <div class="save-button_block">
+        <button
+          class="save-button button"
+          type="button"
+          onclick="window['dialog-id'].showModal()"
+          aria-controls="dialog-id"
+        >
+          <svg class="save-svg">
+            <use href="./svg/floppy.svg#floppy"></use>
+          </svg>
+          <span class="button__text">Сохранить на память</span>
+        </button>
+      </div>
       <dialog id="dialog-id">
         <div class="dialog-titile">
           <svg class="dialog-svg">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
-          <p class="button__text dialog-text">
+          <p class="dialog-text">
             Вставьте <br />дискету, чтобы <br />продолжить
           </p>
         </div>
-
         <button
-          class="ok-button"
+          class="ok-button button"
           type="button"
           onclick="window['dialog-id'].close()"
         >
