--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon (2).svg" type="image/svg+xml" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="favicon-icon" href="./images/favicon.png" />
   </head>
   <body class="page">
