--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="favicon-icon" href="./images/favicon.png" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
   </head>
   <body class="page">
     <header class="header">
@@ -42,7 +42,7 @@
               основами и настроиться на учёбу. И, возможно, подумать, как новые
               знания могут повлиять на ваше будущее.
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               В этот момент я была полна интузиазма в предвкушении начала
               изучения чего-то нового!
             </p>
@@ -115,7 +115,7 @@
               за этим ощущением скрываются более глубокие вопросы: с чего
               начать? а вдруг будет слишком сложно? что, если я не справлюсь?
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               Было страшно. Но чем дальше, тем понятней!
             </p>
           </div>
@@ -184,7 +184,7 @@
               могла быстро померкнуть и смениться ожиданием провала. Или вы,
               наоборот, могли вдохновиться успехами и поверить в себя.
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               Чем больше получалось, тем больше верила в себя!
             </p>
           </div>
@@ -256,7 +256,7 @@
               подвержены перфекционизму и вместо того, чтобы сделать идеально,
               старались просто сделать.
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               Сверяла каждый пиксель, чтобы сделать идеально!
             </p>
           </div>
@@ -328,7 +328,7 @@
               поддавался. Осваивать что-то новое легче, когда рядом есть
               единомышленники, не правда ли?
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               Да! Всегда можно позлиться вместе.
             </p>
           </div>
@@ -397,7 +397,7 @@
               вам могло показаться, что решения просто иссякли. Значит, пришло
               время посмотреть на задачу под другим углом.
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               Рассматривала задачи под всеми углами, даже по оси апликат!
             </p>
           </div>
@@ -468,7 +468,7 @@
               пожить. В такие моменты очень нужна концентрация. Вспомните,
               откуда вы её черпали.
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               Я представляля себя успешным разработчиком!
             </p>
           </div>
@@ -540,7 +540,7 @@
               получится, но это тот случай, когда важен сам процесс познания.
               Ведь часто путь — и есть результат.
             </p>
-            <p class="card-description card-description_next-line">
+            <p class="card-description">
               У самурая нет цели, есть только путь. И тогда любой объем теории
               ни по чём!
             </p>
@@ -613,7 +613,7 @@
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
           <p class="dialog-text">
-            Вставьте <br />дискету, чтобы <br />продолжить
+            Вставьте дискету, чтобы продолжить
           </p>
         </div>
         <button
