--- a/index.html
+++ b/index.html
@@ -328,9 +328,7 @@
               поддавался. Осваивать что-то новое легче, когда рядом есть
               единомышленники, не правда ли?
             </p>
-            <p class="card-description">
-              Да! Всегда можно позлиться вместе.
-            </p>
+            <p class="card-description">Да! Всегда можно позлиться вместе.</p>
           </div>
           <div class="buttons-block">
             <button class="card__icon-button" type="button">
@@ -612,9 +610,7 @@
           <svg class="dialog-svg">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
-          <p class="dialog-text">
-            Вставьте дискету, чтобы продолжить
-          </p>
+          <p class="dialog-text">Вставьте дискету, чтобы продолжить</p>
         </div>
         <button
           class="ok-button button"
